...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="024-nc-ctF">
                                <rect key="frame" x="98" y="18" width="24" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="I8L-b4-cTX"/>
                                    <constraint firstAttribute="width" secondItem="024-nc-ctF" secondAttribute="height" multiplier="1:1" id="jNw-4v-XyC"/>
                                </constraints>
                                <state key="normal" image="camera"/>
                                <connections>
                                    <action selector="camera1Action:" destination="wtZ-Wr-mwl" eventType="touchUpInside" id="ear-g7-eNZ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynz-he-Zjb">
                                <rect key="frame" x="298" y="18" width="24" height="24"/>
...
                                                            <action selector="newGameAction:" destination="PNv-vC-wsN" eventType="touchUpInside" id="rTw-Hn-hyZ"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CUE-FL-p9Y">
                                                        <rect key="frame" x="174" y="0.0" width="200" height="200"/>
                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" image="history"/>
                                                        <connections>
                                                            <action selector="historyAction:" destination="PNv-vC-wsN" eventType="touchUpInside" id="9RR-N8-Iov"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ttg-Ol-JPr">
                                                <rect key="frame" x="0.0" y="216" width="374" height="192"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SYb-j0-Cps">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="192"/>
                                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" image="settings0">
                                                            <color key="titleColor" name="darkGray"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="settingsAction:" destination="PNv-vC-wsN" eventType="touchUpInside" id="QeE-8m-xUE"/>
                                                        </connections>
                                                    </button>
...
