...
        plusButton?.isHidden = false
        collectionView?.isHidden = true
    }
    
    private func setupPlusButton() {
        let button = UIButton()
        button.setImage(UIImage(named: "plus"), for: .normal)
        button.tintColor = .white
        button.backgroundColor = BelaTheme.shared.transparentBackgroundColor
        button.addTarget(self, action: #selector(plusAction), for: .touchUpInside)
        
        contentView.addSubview(button)
        
...
